@@ -46,7 +46,6 @@ public final class WhereTraversalStep<S> extends FilterStep<S> implements Traver
 
     protected Traversal.Admin<?, ?> whereTraversal;
     protected final Set<String> scopeKeys = new HashSet<>();
-    private Boolean pathSelectKey = null;
     protected Set<String> keepLabels;
 
     public WhereTraversalStep(final Traversal.Admin traversal, final Traversal<?, ?> whereTraversal) {
@@ -135,18 +134,7 @@ public final class WhereTraversalStep<S> extends FilterStep<S> implements Traver
 
     @Override
     public Set<TraverserRequirement> getRequirements() {
-        return null == this.pathSelectKey ?
-                TraversalHelper.getLabels(TraversalHelper.getRootTraversal(this.getTraversal())).stream().filter(this.scopeKeys::contains).findAny().isPresent() ?
-                        TYPICAL_GLOBAL_REQUIREMENTS :
-                        TYPICAL_LOCAL_REQUIREMENTS :
-                this.pathSelectKey ?
-                        TYPICAL_GLOBAL_REQUIREMENTS :
-                        TYPICAL_LOCAL_REQUIREMENTS;
-    }
-
-    @Override
-    public void setPathLabels(final Set<String> labels) {
-        this.pathSelectKey = labels.stream().filter(this.scopeKeys::contains).findAny().isPresent();
+        return this.getSelfAndChildRequirements(TraverserRequirement.OBJECT, TraverserRequirement.SIDE_EFFECTS);
     }
 
     @Override
