@@ -41,7 +41,6 @@ public final class SelectOneStep<S, E> extends MapStep<S, E> implements Traversa
 
     private final Pop pop;
     private final String selectKey;
-    private Boolean pathSelectKey = null;
     private Traversal.Admin<S, E> selectTraversal = null;
     private Set<String> keepLabels;
 
@@ -104,17 +103,7 @@ public final class SelectOneStep<S, E> extends MapStep<S, E> implements Traversa
 
     @Override
     public Set<TraverserRequirement> getRequirements() {
-        if (null == this.pathSelectKey)
-            return this.getSelfAndChildRequirements(TraversalHelper.getLabels(TraversalHelper.getRootTraversal(this.traversal)).contains(this.selectKey) ?
-                    TYPICAL_GLOBAL_REQUIREMENTS_ARRAY :
-                    TYPICAL_LOCAL_REQUIREMENTS_ARRAY);
-        else
-            return this.getSelfAndChildRequirements(this.pathSelectKey ? TYPICAL_GLOBAL_REQUIREMENTS_ARRAY : TYPICAL_LOCAL_REQUIREMENTS_ARRAY);
-    }
-
-    @Override
-    public void setPathLabels(final Set<String> labels) {
-        this.pathSelectKey = labels.contains(this.selectKey);
+        return this.getSelfAndChildRequirements(TraverserRequirement.OBJECT, TraverserRequirement.SIDE_EFFECTS);
     }
 
     @Override
