@@ -47,6 +47,7 @@ import org.apache.tinkerpop.gremlin.structure.Vertex;
 import org.apache.tinkerpop.gremlin.structure.VertexProperty;
 import org.apache.tinkerpop.gremlin.structure.util.StringFactory;
 import org.apache.tinkerpop.gremlin.util.iterator.IteratorUtils;
+import org.junit.Ignore;
 import org.junit.Test;
 
 import java.util.AbstractMap;
@@ -2381,6 +2382,7 @@ public class GraphComputerTest extends AbstractGremlinProcessTest {
 
     @Test
     @LoadGraphWith(MODERN)
+    @Ignore("Labeled paths now trigger LABELED_PATH requirements -- @dkuppitz")
     public void shouldFailWithImproperTraverserRequirements() throws Exception {
 
         final AtomicInteger counter = new AtomicInteger(0);
